--- a/Devoir1_APP/PIF1006Devoir1_App/PIF1006Devoir1_App/MainWindow.xaml
+++ b/Devoir1_APP/PIF1006Devoir1_App/PIF1006Devoir1_App/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="Opérations sur les matrices" Height="650" Width="725">
     <Grid>
-        <TextBox x:Name="LignesA" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
-        <TextBox x:Name="ColonnesA" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="LignesA" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
+        <TextBox x:Name="ColonnesA" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
 
 
         <TextBox x:Name="A1_1" HorizontalAlignment="Left" Height="23" Margin="29,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" RenderTransformOrigin="0.217,0.233" />
@@ -46,8 +46,8 @@
         <TextBox x:Name="A5_5" HorizontalAlignment="Left" Height="23" Margin="169,236,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" RenderTransformOrigin="0.217,0.233" />
         <Button x:Name="EffacerTout" Content="Effacer tout" HorizontalAlignment="Left" Margin="544,282,0,0" VerticalAlignment="Top" Width="103" Click="EffacerTout_Click"/>
         <Grid Margin="221,0,-221,0">
-            <TextBox x:Name="LignesB" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
-            <TextBox x:Name="ColonnesB" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
+            <TextBox x:Name="LignesB" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
+            <TextBox x:Name="ColonnesB" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
 
 
             <TextBox x:Name="B1_1" HorizontalAlignment="Left" Height="23" Margin="22,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" RenderTransformOrigin="0.217,0.233" />
@@ -85,8 +85,8 @@
                     <RowDefinition Height="362*"/>
                     <RowDefinition Height="257*"/>
                 </Grid.RowDefinitions>
-                <TextBox x:Name="LignesC" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
-                <TextBox x:Name="ColonnesC" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58" TextChanged="textBox_TextChanged"/>
+                <TextBox x:Name="LignesC" HorizontalAlignment="Left" Height="23" Margin="33,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
+                <TextBox x:Name="ColonnesC" HorizontalAlignment="Left" Height="23" Margin="119,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
 
 
                 <TextBox x:Name="C1_1" HorizontalAlignment="Left" Height="23" Margin="33,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" RenderTransformOrigin="0.217,0.233" />
@@ -136,7 +136,7 @@
         <Button x:Name="BtnAddition" Content="Addition de A et B" HorizontalAlignment="Left" Margin="33,282,0,0" VerticalAlignment="Top" Width="161" Click="BtnAddition_Click"/>
         <Button x:Name="BtnProduitScalaire" Content="Produit de A par scalaire :" HorizontalAlignment="Left" Margin="33,307,0,0" VerticalAlignment="Top" Width="161" Click="BtnProduitScalaire_Click"/>
         <TextBox x:Name="Scalaire" HorizontalAlignment="Left" Height="23" Margin="199,307,0,0" TextWrapping="Wrap" Text="Scalaire" GotFocus="Scalaire_GotFocus" VerticalAlignment="Top" Width="48"/>
-        <Button x:Name="BtnProduitMatriciel" Content="Produit Matriciel de A et B" HorizontalAlignment="Left" Margin="33,332,0,0" VerticalAlignment="Top" Width="161" Click="BtnProduitMatriciel_Click"/>
+        <Button x:Name="BtnProduitMatriciel" Content="Produit Matriciel de A et B (et C)" HorizontalAlignment="Left" Margin="33,332,0,0" VerticalAlignment="Top" Width="188" Click="BtnProduitMatriciel_Click"/>
         <Button x:Name="Triangularite" Content="Matrice A triangulaire ?" HorizontalAlignment="Left" Margin="33,357,0,0" VerticalAlignment="Top" Width="161" Click="BtnTriangularite_Click" RenderTransformOrigin="0.497,-1.15"/>
         <RadioButton x:Name="radioButton1" Content="Inférieure" HorizontalAlignment="Left" Margin="34,382,0,0" VerticalAlignment="Top" GroupName="Triangulaire"/>
         <RadioButton x:Name="radioButton2" Content="Supérieure" HorizontalAlignment="Left" Margin="34,397,0,0" VerticalAlignment="Top" GroupName="Triangulaire"/>
@@ -152,6 +152,7 @@
         <Label x:Name="Xs_Copy" Content="b" HorizontalAlignment="Left" Margin="256,251,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.252,0.079"/>
         <Label x:Name="EpsilonLabel" Content="Epsilon (décimal) :" HorizontalAlignment="Left" Margin="489,326,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.252,0.079"/>
         <TextBox x:Name="Epsilon" HorizontalAlignment="Left" Height="23" Margin="594,329,0,0" TextWrapping="Wrap" GotFocus="Scalaire_GotFocus" VerticalAlignment="Top" Width="36" Text="0.02"/>
+        <Button x:Name="Carree" Content="Matrice A carrée?" HorizontalAlignment="Left" Margin="34,582,0,0" VerticalAlignment="Top" Width="159" Click="Carree_Click"/>
 
 
     </Grid>
